--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -4,34 +4,101 @@
 
 
 {% block content %}
-<div class="container">
-<!--FILTER CATEGORIES-->
-		<div class = 'filter-container'>
-			{% for category in categories %}
-				<div class="filt full" id='butallprod'>
-					<a href="{{ category.get_absolute_url }}">{{ category.name }}</a>
-				</div>
-			{% empty %}
-				<p>There are no categories</p>
-			{% endfor %}
-		</div>
-	
-<!--PRODUCTS-->
-		<div class="container catalog">
-			{% for product in products %}
-				<div class = 'product'>
-					<img class="product-image" src="{{product.image.url}}">
-					<h4><a href="{{ product.get_absolute_url }}">{{product.name}}</h4></a>
-					<div class='price'>
-						{{product.price}}	
-					</div>
-					<button class='button-product' id = '{{ product.id }}' onclick="addCart({{ product.id }})"><img src="{% static "img/korzina.jpg"%}" 
-					style="height: 30px; width:30px; align: center"></button>
-				</div> 
-			{% empty %}
-				<p>There are no products</p>          	
-			{% endfor %}
-		</div> 	
-	
-	</div>
+    <div id="heading-breadcrumbs">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-7">
+                    <h1>Все категории</h1>
+                </div>
+                <div class="col-md-5">
+                    <ul class="breadcrumb">
+                        <li><a href="{% url 'index'%}">Home</a>
+                        </li>
+                        <li>Categories</li>
+                    </ul>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+	<div id="content">
+        <div class="container">
+            <div class="row">
+                <!-- *** LEFT COLUMN ***-->
+                <div class="col-sm-9">
+
+                    <p class="text-muted lead">In our Ladies department we offer wide selection of the best products we have found and carefully selected worldwide. Pellentesque habitant morbi tristique senectus et netuss.</p>
+
+                    <div class="row products">
+                        {% for product in products %}
+                            <div class="col-md-4 col-sm-6">
+                                <div class="product">
+                                    <div class="image">
+                                        <a href="{{ product.get_absolute_url }}">
+                                            <img src="{{product.image.url}}" alt="" class="img-responsive image1">
+                                        </a>
+                                    </div>
+                                    <!-- /.image -->
+                                    <div class="text">
+                                        <h3><a href="{{ product.get_absolute_url }}">{{product.name}}</a></h3>
+                                        <p class="price">{{product.price}}₴</p>
+                                        <p class="buttons">
+                                            <a href="{{ product.get_absolute_url }}" class="btn btn-default">View detail</a>
+                                            <a href="{{ product.get_absolute_url }}" class="btn btn-template-main"><i class="fa fa-shopping-cart"></i>Add to cart</a>
+                                        </p>
+                                    </div>
+                                    <!-- /.text -->
+                                </div>
+                                <!-- /.product -->
+                        </div>
+                        <!-- /.col-md-4 -->
+                        {% endfor %} 
+                    </div>
+                    <!-- /.products -->
+                </div>
+                <!-- /.col-md-9 -->
+
+                <!-- *** LEFT COLUMN END *** -->
+
+                <!-- *** RIGHT COLUMN ***
+		_________________________________________________________ -->
+
+                <div class="col-sm-3">
+
+                    <!-- *** MENUS AND FILTERS ***
+_________________________________________________________ -->
+                    <div class="panel panel-default sidebar-menu">
+
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Categories</h3>
+                        </div>
+
+                        <div class="panel-body">
+                            <ul class="nav nav-pills nav-stacked category-menu">
+                                <li class="active">
+                                    <a href="#">Ladies </a>
+                                    <ul>
+                                    	{% for category in categories%}
+                                        <li><a href="{{ category.get_absolute_url }}">{{category.name}}</a>
+                                        </li>
+                                        {% endfor %}
+                                    </ul>
+                                </li>
+                            </ul>
+
+                        </div>
+                    </div>
+                </div>
+                <!-- /.col-md-3 -->
+
+                <!-- *** RIGHT COLUMN END *** -->
+            </div>
+        </div>
+        <!-- /.container -->
+    </div>
+    <!-- /#content -->
+
+
 {% endblock %}
